cluster-components/non-prod-kuberos/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kuberos
spec:
  template:
    metadata:
      labels:
        app: kuberos
    spec:
      containers:
      - name: kuberos
        image: negz/kuberos:31a4d6e
        command:
        - "/kuberos"
        - "$(OIDC_ISSUER_URL)"
        - "$(OIDC_CLIENT_ID)"
        - "/cfg/secret"
        - "/cfg/template"

        ports:
        - containerPort: 10003
          name: http

        volumeMounts:
        - name: cfg
          mountPath: /cfg

      volumes:
      - name: cfg
        secret:
          secretName: kuberos
