cluster-components/non-prod-kuberos/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kuberos
spec:
  ports:
  - port: 80
    name: http
    targetPort: http
  selector:
    app: kuberos
