cluster-components/non-prod-kuberos/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuberos
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: login.apps.non-production.k8s.integration.dsd.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kuberos
          servicePort: http
